# dvs-backend

./: .gitignore  Cargo.toml  README.md  diesel.toml  gen-migration.sh  redeploy.sh
migrations/2025-06-29-025022_20250629025022_migration/: down.sql  up.sql
migrations/2025-07-16-063546_20250716063546_migration/: down.sql  up.sql
src/: main.rs  schema.rs  state.rs
src/db/: mod.rs
src/dto/: auth.rs  email.rs  mod.rs  response.rs
src/handlers/: auth_handler.rs  user_handler.rs
src/middlewares/: auth.rs
src/models/: candidate.rs  mod.rs  otp.rs  poll.rs  user.rs  vote.rs  voter.rs
src/repositories/: mod.rs  otp_repo.rs  user_repo.rs
src/routes/: auth_routes.rs  mod.rs  user_routes.rs
src/services/: auth_service.rs  email_service.rs  mod.rs  user_service.rs
src/templates/: verification_email.html
src/utils/: error.rs  jwt.rs  mod.rs  otp.rs  password.rs  response.rs
