[package]
name = "dvs-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum ecosystem
axum = "0.7"            # Web framework (like Express.js)
tokio = { version = "1", features = ["full"] } # Async runtime
serde = { version = "1", features = ["derive"] } # JSON serialization
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

tera = "1.19"

# Diesel ORM
diesel = { version = "2.2.11", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json", "64-column-tables"] } # PostgreSQL ORM
diesel_migrations = "2.2.0"
dotenvy = "0.15"         # Load .env files

# Password hashing
argon2 = "0.5"

# JWT for Auth
jsonwebtoken = "9"      # JWT for SIWE authentication

# UUIDs
uuid = { version = "1.4", features = ["v4", "serde"] }  # Unique IDs for votes

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# ethers = "2.0"          # Blockchain interactions
# tower-http = { version = "0.5", features = ["cors", "trace"] } # HTTP utilities

"rand" = "0.8"
rand_core = "0.6"
chrono = "0.4"
